--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
-    "core-js": "^3.15.1",
     "@nuxtjs/style-resources": "^1.0.0",
-    "nuxt": "^2.15.7",
+    "core-js": "^3.15.1",
     "node-sass": "^4.14.1",
-    "sass-loader": "^10.0.1"
+    "nuxt": "^2.15.7",
+    "sass-loader": "^10.0.1",
+    "three": "^0.134.0"
   },
   "devDependencies": {
     "vue-cli-plugin-pug": "~2.0.0"
