--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "lint": "npm run lint:js",
+    "lintfix": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
+    "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "@nuxtjs/axios": "^5.13.6",
@@ -15,9 +18,20 @@
     "node-sass": "^4.14.1",
     "nuxt": "^2.15.7",
     "sass-loader": "^10.0.1",
-    "three": "^0.134.0"
+    "three": "^0.134.0",
+    "vue": "^2.6.14"
   },
   "devDependencies": {
-    "vue-cli-plugin-pug": "~2.0.0"
+    "eslint": "4.19.1",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-import-resolver-nuxt": "^1.0.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "vue-cli-plugin-pug": "~2.0.0",
+    "eslint-config-google": "0.9.1",
+    "babel-eslint": "10.0.3",
+    "eslint-plugin-html": "3.2.2",
+    "eslint-loader": "3.0.3"
   }
 }
