--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint:js": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@aksonorg/design": "0.5.5",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/style-resources": "^1.0.0",
     "core-js": "^3.15.1",
