--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "nuxt": "^2.15.7",
     "sass-loader": "^10.0.1",
     "three": "^0.134.0",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-js-modal": "1.3.33"
   },
   "devDependencies": {
     "eslint": "4.19.1",
